# bk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bk.cabal  bk.code-workspace  stack.yaml
app/: Main.hs
doc/setup/assets/: setup-diagram.pikchr
src/: BK.hs  Lib.hs  TUI.hs
src/BK/: BKMap.hs  Doc.hs  Lib.hs  Setup.hs
src/BK/Test/: SetupTest.hs
src/CLI/: TUI.hs
test/: test.csv
