cabal-version: 2.2

name:           bk
version:        0.1.0.0
category:       Productivity
synopsis:       A command-line tool for bookmarking locations and commands
description:    Please see the README on GitHub at <https://github.com/WorkerBee-Fitness/bk#readme>
homepage:       https://github.com/WorkerBee-Fitness/bk#readme
bug-reports:    https://github.com/WorkerBee-Fitness/bk/issues
author:         Harley Eades III
maintainer:     harley.eades@wbee.fit
copyright:      BSD-3-Clause
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/WorkerBee-Fitness/bk

common extensions
  default-extensions:
    InstanceSigs
    DeriveGeneric

library
  import: extensions
  exposed-modules:
      BK.Setup
      BK.TUI
      BK.BKMap
      BK.Lib
      BK.Doc
  other-modules:
      Paths_bk
  autogen-modules:
      Paths_bk
  hs-source-dirs:
      src
  ghc-options: -Werror -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  default-extensions:
      ImportQualifiedPost
    , OverloadedStrings
    , ViewPatterns
  build-depends:
    , base                 >=4.7       && <5
    , filepath             >=1.5       && <1.6
    , linear-base          >=0.7       && <0.8
    , containers           >=0.7       && <0.8
    , vector               >=0.13      && <0.14
    , cassava              >=0.5.4     && <0.5.5
    , process              >=1.4       && <1.7
    , text                 >=2.1       && <3
    , bytestring           >=0.12      && <0.13
    , time                 >=1.12      && <1.15
    , utf8-string          >=1.0.2     && <1.0.3
    , directory            >=1.3.8     && <1.4
    , optparse-applicative >=0.18.1.0  && <0.20
    , attoparsec           >=0.14.4    && <0.16
    , haskeline            >=0.8.4.1   && <0.9
    , toml-parser          >=2.0.2     && <2.1
    , hikchr               >=0.2       && <0.3
  default-language: Haskell2010

executable bk
  main-is: Main.hs
  other-modules:
      Paths_bk
  autogen-modules:
      Paths_bk
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base >=4.7 && <5
    , bk
  default-language: Haskell2010

test-suite bk-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_bk
  autogen-modules:
      Paths_bk
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bk
    , cassava >=0.5.4 && <0.5.5
    , wbee-lib
  default-language: Haskell2010
